r458
--For an extended version history, please visit the github changelog.  https://github.com/nrlulz/ACF/commits/master

*r459
--Scaled recoil and HE shove based upon the physical mass of the contraption rather than the total mass. Kinetic impacts remain unchanged.

*r462
--Fuel tanks can now be persisted.

*r463
--Added clientside function acf_cl_particlemul to reduce particle counts clientside for HE/HEAT explosions.

*r464
--Added Flechette ammo.  See ammo description for more detail.